app/css/app.css
/* ... */
.recipe-search-control .loading {
  text-align: center;
}

@media (max-width: 320px) {
  .recipe-search-control .my-dropdown-menu {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    margin-top: 0;
  }

  .recipe-search-control .recipe-menu-scrollable {
    max-height: 100%;
    overflow-y: auto;
  }
}

@media (max-height: 320px) {
  .recipe-search-control .my-dropdown-menu {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    margin-top: 0;
  }

  .recipe-search-control .recipe-menu-scrollable {
    max-height: 100%;
    overflow-y: auto;
  }

  .recipe-search-control .search {
    display: none;
  }
}

.simulator-status .title {
  font-size: x-large;
  font-weight: bold;
}

.simulator-status .stats-label {
  font-weight: bold;
}

.simulator-status .align-right {
  text-align: right;
}

.simulator-status hr {
  margin-top: 5px;
  margin-bottom: 10px;
  border-top: 1px solid darkgrey;
  border-bottom: 1px solid white;
}

.bonus-stats {
  background: #f5f5f5;
  border: 2px solid #e3e3e3;
  border-radius: 3px;
  padding: 10px;
  overflow: auto;
  margin-bottom: 20px;
}

.bonus-stats table {
  width: 100%;
}

.bonus-stats form {
  margin: 0;
}

.bonus-stats td {
  vertical-align: middle;
}

.bonus-stats td.col1 {
  min-width: 110px;
  width: 120px;
}

.bonus-stats td.col2 {
  min-width: 30px;
  width: 50px;
}

.bonus-stats td.col3 {
  min-width: 30px;
  width: 50px;
}

.bonus-stats td.col4 {
  min-width: 90px;
  width: 90px;
}

.bonus-stats td.col5 {
  min-width: 30px;
  width: 50px;
}

.bonus-stats input {
  text-align: right;
  margin-bottom: 4px;
  padding: 2px;
}

@media (max-width: 767px) {
  .bonus-stats input.input-mini {
    width: 50px;
  }
}

.synth-status {
  background: #f5f5f5;
  border: 2px solid #e3e3e3;
  border-radius: 3px;
  padding: 10px;
  overflow: auto;
  margin-bottom: 20px;
}

.synth-status .progress {
  background-image: linear-gradient(to bottom, #D0D0D0, #EAEAEA);
  box-shadow: inset 0 2px 6px rgba(0, 0, 0, 0.1);
}

.synth-status table {
  width: 100%;
}

.synth-status td.bar {
  width: 100%;
}

.synth-status td.bar .progress {
  margin-bottom: 10px;
}

.synth-status td.bar-value {
  min-width: 7em;
  text-align: right;
  font-size: larger;
  padding-left: 10px;
  vertical-align: top;
}

.synth-status .narrow {
  line-height: 9px;
}

div[content*="actiontooltip"] div.tooltip-inner {
  /*min-width: 15em;*/
  max-width: 320px;
  text-align: left;
}

.action-tooltip-title {
  font-size: large;
  font-weight: bold;
  margin-bottom: 5px;
}

.action-tooltip-fields {
}

.action-tooltip-field-name {
  font-size: small;
  font-weight: bold;
}

.action-tooltip-field-value {
  font-size: small;
  font-weight: normal;
  float: right;
}

/*
div[content*="actiontooltip"] div.tooltip-arrow {
  display: none;
}
*/

/* Customized Dropdown Menu */

.my-dropdown {
  position: relative;
  display: inline-block;
}

.my-dropdown-toggle {
  *margin-bottom: -3px;
}

.my-dropdown-toggle:active,
.open .my-dropdown-toggle {
  outline: 0;
}

.my-dropdown .caret {
  margin-top: 8px;
  margin-left: 2px;
}

.my-dropdown-menu {
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1000;
  display: none;
  float: left;
  min-width: 160px;
  padding: 5px 0;
  margin: 2px 0 0;
  list-style: none;
  background-color: #ffffff;
  border: 1px solid #ccc;
  border: 1px solid rgba(0, 0, 0, 0.2);
  *border-right-width: 2px;
  *border-bottom-width: 2px;
  -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
          border-radius: 6px;
  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  -webkit-background-clip: padding-box;
     -moz-background-clip: padding;
          background-clip: padding-box;
  text-align: left;
}

.my-dropdown-menu.pull-right {
  right: 0;
  left: auto;
}

.my-dropdown-menu .divider {
  *width: 100%;
  height: 1px;
  margin: 9px 1px;
  *margin: -5px 0 5px;
  overflow: hidden;
  background-color: #e5e5e5;
  border-bottom: 1px solid #ffffff;
}

.my-dropdown-menu li > a {
  display: inline-block;
  padding: 3px 11px;
  clear: both;
  font-weight: normal;
  line-height: 20px;
  color: #333333;
  white-space: nowrap;
  cursor: default;
  text-decoration: none;
}

.my-dropdown-menu li:hover {
  background-color: #0081c2;
  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
}

.my-dropdown-menu .active,
.my-dropdown-menu .active:hover,
.my-dropdown-menu .active:focus {
  background-color: #0081c2;
  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
}

.my-dropdown-menu li > a:hover,
.my-dropdown-menu li > a:focus {
  color: #ffffff;
}

.my-dropdown-menu li.active > a,
.my-dropdown-menu li.active > a:hover,
.my-dropdown-menu li.active > a:focus {
  color: #ffffff;
  outline: 0;
}

.my-dropdown-menu .disabled,
.my-dropdown-menu .disabled:hover,
.my-dropdown-menu .disabled:focus {
  color: #999999;
}
/* ... */

